added phone num

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<button class = "btn b2">Résumé</button>
 
 	</div>
-	<h3><strong>Contact: fardinkhan@uvic.ca</strong></h3>
+	<h3><strong>Contact: fardinkhan@uvic.ca, (778) 551-2510</strong></h3>
 
 </body>
 </html>
