--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 
 <link href="https://fonts.googleapis.com/css?family=Assistant:200|IBM+Plex+Sans+Condensed:100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<script src="app.js"></script>
+
 
 </head>
 
 <body>
-	<h1>Fardin Khan </br> iOS developer</h1>
+	<h1>Fardin Khan<strong>.</strong> </br> software engineer with a focus on </br>iOS development </h1>
 	<h2><strong>University of Victoria · Computer Science </strong></h2>
 	<div class = "container">
 	<a href = "https://github.com/f2k5">
@@ -18,8 +20,12 @@
 		<button class = "btn b2">Résumé</button>
 
 	</div>
-	<h3><strong>Contact: fardinkhan@uvic.ca, (778) 551-2510</strong></h3>
-
+	<h3><strong>fardinkhan@uvic.ca, +1 778 551 2510</strong></h3>
+	
 </body>
+	<script src="app.js"></script>
+	
+
 </html>
+
 
