added meta charset

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Fardin</title>
-
+<meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css?family=Assistant:200|IBM+Plex+Sans+Condensed:100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 	<script src="app.js"></script>
