--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <html>
 <head>
-	<title>Fardin</title>
-<meta charset="UTF-8">
-<link href="https://fonts.googleapis.com/css?family=Assistant:200|IBM+Plex+Sans+Condensed:100&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css"> 
-	<script src="app.js"></script>
-
-
+	<title>Fardin Khan</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
 </head>
 
+
+
+
 <body>
-	<h1>Fardin Khan<strong>.</strong> </br> software engineer with a focus on </br>iOS development </h1>
-	<h2><strong>University of Victoria · Computer Science </strong></h2>
-	<div class = "container">
-	<a href = "https://github.com/f2k5">
+	<div class = "box">
+		<img src="fardin2.jpeg" alt = "pic">
+		<h1>Hey I'm Fardin.</h1>
+		<h2><strong>I like building cool stuff.</strong></h2>
+		<div class = "container">
+	<a href = "https://github.com/f2k5" target="_blank">
 		<button class = "btn b1">GitHub</button> 
 	</a>
 		<button class = "btn b2">Résumé</button>
+	<a href="mailto:fardin_2510@hotmail.com">
+		<button class = "btn b3">Email</button>
+	</a>
 
 	</div>
-	<h3><strong>fardinkhan@uvic.ca, +1 778 551 2510</strong></h3>
+
+	</div>
 	
-</body>
-	<script src="app.js"></script>
+
 	
+</body> 
+
 
 </html>
-
