--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class = "box">
-		<img src="fardin2.jpeg" alt = "pic">
+		<img src="khan.jpg" alt = "pic">
 		<h1>Hey I'm Fardin.</h1>
 		<h2><strong>I like building cool stuff.</strong></h2>
 		<div class = "container">
