--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -13,24 +13,12 @@
 
 <body>
 	<div class = "box">
-		<img src="khan.jpg" alt = "pic">
-		<h1>Hey I'm Fardin.</h1>
-		<h2><strong>I like building cool stuff.</strong></h2>
-		<div class = "container">
-	<a href = "https://github.com/f2k5" target="_blank">
-		<button class = "btn b1">GitHub</button> 
-	</a>
-		<button class = "btn b2">Résumé</button>
-	<a href="mailto:fardin_2510@hotmail.com">
-		<button class = "btn b3">Email</button>
-	</a>
 
-	</div>
-
-	</div>
-	
-
-	
+		<div class="bg-image"></div>
+		
+		<h1>Hey I'm <br>Fardin.</h1>
+		<h2><strong>I am a 4th year computer <br>science student at UVic. <br>I like dogs, memes, food <br>and taking pictures with<br>my iPhone. Life is good. </h2>
+		<h3>Click for: <a href = "https://github.com/f2k5" style= "text-decoration: none; color : #3269a8;" target="_blank"> <strong>GitHub</strong></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #3269a8;">Email</a>.</h3>
 </body> 
 
 
