--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Glegoo|Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -15,11 +15,12 @@
 	<div class = "box">
 
 		<div class="bg-image"></div>
-		
-		<h1>Hey I'm <br>Fardin.</h1>
-		<h2><strong>I am a 4th year computer <br>science student at UVic. <br>I like dogs, memes, food <br>and taking pictures with<br>my iPhone. Life is good. </h2>
-		<h3>Click for: <a href = "https://github.com/f2k5" style= "text-decoration: none; color : #3269a8;" target="_blank"> <strong>GitHub</strong></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #3269a8;">Email</a>.</h3>
-</body> 
+
+		<h1>Hey I'm Fardin!</h1>
+		<h2>I am a fourth-year computer science student at UVic. <br>I like dogs, memes, food and taking pictures with my<br>iPhone. Life is buzzing and buzy but fun nonetheless. </h2>
+		<h3>Click for:<a href = "https://github.com/f2k5" style= "text-decoration: none; color : #995d6a;" target="_blank"> <strong>GitHub</strong></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #995d6a;"><strong>
+			Email</strong></a>.</h3>
+</body>
 
 
 </html>
