--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 
 
 <body>
-	<div class = "box">
-
-		<div class="bg-image"></div>
-
-		<h1>Hey I'm Fardin!</h1>
-		<h2>I am a fourth-year computer science student at UVic. <br>I like dogs, memes, food and taking pictures with my<br>iPhone. Life is buzzing and buzy but fun nonetheless. </h2>
-		<h3>Click for:<a href = "https://github.com/f2k5" style= "text-decoration: none; color : #995d6a;" target="_blank"> <strong>GitHub</strong></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #995d6a;"><strong>
-			Email</strong></a>.</h3>
+		<div class = "container">
+			<h1><strong>Hey I'm <font color = "#bf6772">Fardin</font>.</strong></h1>
+			<h2>I am a fourth-year <font color = "#bf6772">computer science </font> student at UVic. <br>I like <font color = "#bf6772">dogs</font>, memes, food and taking pictures with my<br>iPhone. Life is buzzing and buzy but <font color="#bf6772">fun</font> nonetheless. </h2>
+			<h3>Click for:<a href = "https://github.com/f2k5" style= "text-decoration: none; color : #bf6772;" target="_blank"> <span class = "GitHover">GitHub</span></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #bf6772;">
+				<span class = "E_hover">Email</span></a>.</h3>
+		</div>
 </body>
 
 
