--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Glegoo|Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Glegoo|Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -14,9 +14,9 @@
 <body>
 		<div class = "container">
 			<h1><strong>Hey I'm <font color = "#bf6772">Fardin</font>.</strong></h1>
-			<h2>I am a fourth-year <font color = "#bf6772">computer science </font> student at UVic. <br>I like <font color = "#bf6772">dogs</font>, memes, food and taking pictures with my<br>iPhone. Life is buzzing and buzy but <font color="#bf6772">fun</font> nonetheless. </h2>
-			<h3>Click for:<a href = "https://github.com/f2k5" style= "text-decoration: none; color : #bf6772;" target="_blank"> <span class = "GitHover">GitHub</span></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #bf6772;">
-				<span class = "E_hover">Email</span></a>.</h3>
+			<h2>I am a fourth-year computer science student at UVic. <br>I like dogs, memes, food and taking pictures with my iPhone. <br> Life is buzzing and buzy but fun nonetheless. </h2>
+			<h3> <strong>Click for:</strong><a href = "https://github.com/f2k5" style= "text-decoration: none; color: #bf6772" target="_blank"> <span class = "GitHover"><strong>GitHub</strong></span></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #bf6772;">
+				<span class = "E_hover"><strong>Email</strong></span></a>.</h3>
 		</div>
 </body>
 
