--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 <body>
 		<div class = "container">
 			<h1><strong>Hey I'm <font color = "#bf6772">Fardin</font>.</strong></h1>
-			<h2><strong> I write <font color = "#bf6772">code</font>. <br>I'm doing <font color = "#bf6772">CS</font> at <font color = "#bf6772">UVic</font>.</strong> </h2> <!--am a fourth-year computer science student at UVic. <br>I like dogs, memes, food and taking pictures with my iPhone. <br> Life is buzzing and buzy but fun nonetheless. </h2> -->
-			<h3> <strong>Click for:</strong><a href = "https://github.com/f2k5" style= "text-decoration: none; color: #bf6772" target="_blank"> <span class = "GitHover"><strong>GitHub</strong></span></a>, <a href="mailto:fardin_2510@hotmail.com" style="text-decoration: none; color : #bf6772;">
-				<span class = "E_hover"><strong>Email</strong></span></a>.</h3>
+			<h2>I'm doing <font color = "#bf6772">computer science </font>at <font color = "#bf6772">UVic</font>.<br> <strong> I build <font color = "#bf6772">things</font>.</strong> </h2> 
+			<h3>
+				<a href = "https://github.com/f2k5">
+					<img src="g2.png" alt="lit" width="75" height="75"> 
+				</a>
+			</h3>
+
+			<h4> 
+				<a href="mailto:fardin_2510@hotmail.com">
+					<img src="email.png" width="120" height="120"> 
+				</a>
+			</h4>
 		</div>
 </body>
 
