--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<h4> 
 				<a href="mailto:fardin_2510@hotmail.com">
-					<img src="email.png" width="120" height="120"> 
+					<img src="email.png" alt="meh" width="120" height="120"> 
 				</a>
 			</h4>
 		</div>
