new window when GitHub logo clicked

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1><strong>Hey I'm <font color = "#bf6772">Fardin</font>.</strong></h1>
 			<h2>I'm doing <font color = "#bf6772">computer science </font>at <font color = "#bf6772">UVic</font>.<br> <strong> I build <font color = "#bf6772">things</font>.</strong> </h2> 
 			<h3>
-				<a href = "https://github.com/f2k5">
+				<a href = "https://github.com/f2k5" target="_blank">
 					<img src="g2.png" alt="lit" width="75" height="75"> 
 				</a>
 			</h3>
