--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Glegoo|Thasadith|Righteous|Bungee+Shade|Zilla+Slab+Highlight:700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
 </head>
 
 
@@ -13,19 +13,27 @@
 
 <body>
 		<div class = "container">
-			<h1><strong>Hey I'm <font color = "#bf6772">Fardin</font>.</strong></h1>
-			<h2>I'm doing <font color = "#bf6772">computer science </font>at <font color = "#bf6772">UVic</font>.<br> <strong> I build <font color = "#bf6772">things</font>.</strong> </h2> 
+			<h1>Hey I'm <font color = "#bf6772">Fardin</font>.</h1>
+			<h2>I'm doing <font color = "#bf6772">computer science </font>at <font color = "#bf6772">UVic</font>.<br> I build <font color = "#bf6772">things</font>. </h2> 
 			<h3>
-				<a href = "https://github.com/f2k5" target="_blank">
-					<img src="g2.png" alt="lit" width="75" height="75"> 
+				<div class="row">
+				  <div class="column">
+				 <a href = "https://github.com/f2k5" target="_blank">
+				    <img src="aaa.png" width="75" height="75" >
 				</a>
-			</h3>
+				  </div>
 
-			<h4> 
-				<a href="mailto:fardin_2510@hotmail.com">
-					<img src="email.png" alt="meh" width="120" height="120"> 
-				</a>
-			</h4>
+				  <div class="column">
+				  		<a href="mailto:fardin_2510@hotmail.com">
+
+				    		<img src="email.png" width="75" height="75" >
+				    	</a>
+				  </div>
+
+				 
+				</div>
+			</h3>
+			
 		</div>
 </body>
 
