--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
 
 <body>
 		<div class = "container">
-			<h1>Hey I'm <font color = "#bf6772">Fardin</font>.</h1>
-			<h2>I'm doing <font color = "#bf6772">computer science </font>at <font color = "#bf6772">UVic</font>.<br> I build <font color = "#bf6772">things</font>. </h2> 
+			<h1>Hey I'm Fardin.</h1>
+			<h2>I'm doing computer science at UVic.<br> I build things. </h2> 
 			<h3>
 				<div class="row">
 				  <div class="column">
-				 <a href = "https://github.com/f2k5" target="_blank">
-				    <img src="aaa.png" width="75" height="75" >
-				</a>
+				 		<a href = "https://github.com/f2k5" target="_blank">
+				    		<img src="Octocat.png" width="105" height="90" >
+						</a>
 				  </div>
 
 				  <div class="column">
-				  		<a href="mailto:fardin_2510@hotmail.com">
+				  		<a href = "https://twitter.com/fwittery" target="_blank">
+				  			<img src="twitter.png" width="115" height="115">
+				 		</a>
+				  </div>	
 
-				    		<img src="email.png" width="75" height="75" >
+				  <div class="column">
+				  		<a href="mailto:fardin_2510@hotmail.com">
+							<img src="email.png" width="90" height="90" >
 				    	</a>
 				  </div>
+
+				  
 
 				 
 				</div>
