--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Slabo+27px|Libre+Caslon+Text|Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
 </head>
 
 
@@ -14,24 +14,24 @@
 <body>
 		<div class = "container">
 			<h1>Hey I'm Fardin.</h1>
-			<h2>I'm doing computer science at UVic.<br> I build things. </h2> 
+			<h2>I'm doing computer science at UVic.<br> I experiment with code <br> and prefer keeping my design simple. </h2> 
 			<h3>
 				<div class="row">
 				  <div class="column">
 				 		<a href = "https://github.com/f2k5" target="_blank">
-				    		<img src="Octocat.png" width="105" height="90" >
+				    		<img src="Octocat.png" width="75" height="60" >
 						</a>
 				  </div>
 
 				  <div class="column">
 				  		<a href = "https://twitter.com/fwittery" target="_blank">
-				  			<img src="twitter.png" width="115" height="115">
+				  			<img src="twitter.png" width="80" height="80">
 				 		</a>
 				  </div>	
 
 				  <div class="column">
 				  		<a href="mailto:fardin_2510@hotmail.com">
-							<img src="email.png" width="90" height="90" >
+							<img src="email.png" width="55" height="55" >
 				    	</a>
 				  </div>
 
