--- a/index.html
+++ b/index.html
@@ -5,37 +5,48 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Alegreya|Alegreya+Sans|Slabo+27px|Libre+Caslon+Text|Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Comic+Neue|Alegreya|Alegreya+Sans|Slabo+27px|Libre+Caslon+Text|Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
 </head>
+
+<!--https://www.flaticon.com/authors/iconixar-->
 
 
 
 
 <body>
 		<div class = "container">
-			<h1> me when someone tries to talk to me about <br> anything that has nothing to do with dogs:
-				
-			</h1>
-			<h2> <img src="doggo.gif"> <br> Yep, that gif is pretty self explanatory. I love dogs. <br> 
-				Besides obsessing over doggo memes/ videos I attend <a href="https://www.uvic.ca/">UVic</a> <br>where I'm a 4th year student studying computer science.</h2> 
+			<h1> Hey I'm Fardin. </h1>
+			<h2> I am a <strong>software engineer</strong> and I build stuff.</h2> 
 
 			<h3> 
 				<div class="row">
 				  <div class="column">
 				 		<a href = "https://github.com/f2k5" target="_blank">
-				    		<img src="github2.gif" width="90" height="120" >
+				    		<img src="Github.png" width="68" height="68" >
 						</a>
 				  </div>
 
 				  <div class="column">
 				  		<a href = "https://twitter.com/fwittery" target="_blank">
-				  			<img src="twitter2.gif" width="80" height="80">
+				  			<img src="twitter copy.png" width="68" height="68">
 				 		</a>
 				  </div>	
 
 				  <div class="column">
 				  		<a href="mailto:fardin_2510@hotmail.com">
-							<img src="email3.gif" width="150" height="100" >
+							<img src="email_cool.png" width="68" height="68" >
+				    	</a>
+				  </div>
+
+				  <div class="column">
+				  		<a href="">
+							<img src="linkedin copy.png" width="68" height="68" >
+				    	</a>
+				  </div>
+
+				  <div class="column">
+				  		<a href="">
+							<img src="resume_icon.png" width="68" height="68" >
 				    	</a>
 				  </div>
 
@@ -45,8 +56,7 @@
 				</div>
 			</h3>
 
-			<h4>PS: My name is Fardin. But yeah thats all guys, bye. Please leave. <br>
-				<strong>Fact:</strong> This portfolio was made while procrastinating on Jan 22, 2020, 1:17 am when I should have instead worked on my assignments.</h4>
+			<h4></h4>
 			
 		</div>
 </body>
