reduced icon sizes

--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
 <body>
 		<div class = "container">
 			<h1> Hey I'm Fardin. </h1>
-			<h2> I am a <strong>software engineer</strong> and I build stuff.</h2> 
+			<h2>I am a software engineer and I build stuff.</h2> 
 
 			<h3> 
 				<div class="row">
 				  <div class="column">
 				 		<a href = "https://github.com/f2k5" target="_blank">
-				    		<img src="Github.png" width="68" height="68" >
+				    		<img src="Github.png" width="60" height="60" >
 						</a>
 				  </div>
 
 				  <div class="column">
 				  		<a href = "https://twitter.com/fwittery" target="_blank">
-				  			<img src="twitter copy.png" width="68" height="68">
+				  			<img src="twitter copy.png" width="60" height="60">
 				 		</a>
 				  </div>	
 
 				  <div class="column">
 				  		<a href="mailto:fardin_2510@hotmail.com">
-							<img src="email_cool.png" width="68" height="68" >
+							<img src="email_cool.png" width="60" height="60" >
 				    	</a>
 				  </div>
 
 				  <div class="column">
 				  		<a href="">
-							<img src="linkedin copy.png" width="68" height="68" >
+							<img src="linkedin copy.png" width="60" height="60" >
 				    	</a>
 				  </div>
 
 				  <div class="column">
 				  		<a href="">
-							<img src="resume_icon.png" width="68" height="68" >
+							<img src="resume_icon.png" width="60" height="60" >
 				    	</a>
 				  </div>
 
