--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
 				    	</a>
 				  </div>
 
-				  
-
-				 
 				</div>
 			</h3>
 
 			<h4></h4>
+
+			<h5>I have build stuff using Java, C, Python, JavaScript and Swift. <br>I am interested in iOS and front end development.</h5>
 			
 		</div>
 </body>
