--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 			<h4></h4>
 
-			<h5>I have build stuff using Java, C, Python, JavaScript and Swift. <br>I am interested in iOS and front end development.</h5>
+			<h5>I experience in Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and front end development.</h5>
 			
 		</div>
 </body>
