fixed safari issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Fardin Khan</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Comic+Neue|Alegreya|Alegreya+Sans|Slabo+27px|Libre+Caslon+Text|Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo|Comic+Neue|Alegreya|Alegreya+Sans|Slabo+27px|Libre+Caslon+Text|Shadows+Into+Light|Yanone+Kaffeesatz:300&display=swap" rel="stylesheet">
 </head>
 
 <!--https://www.flaticon.com/authors/iconixar-->
@@ -15,8 +15,8 @@
 
 <body>
 		<div class = "container">
-			<h1> Hey I'm Fardin. </h1>
-			<h2>I am a software engineer and I build stuff.</h2> 
+			<h1>Fardin Khan</h1>
+			<h2>Computer Science · University of Victoria<br><br>I am a software engineer and I build stuff.</h2> 
 
 			<h3> 
 				<div class="row">
@@ -56,6 +56,11 @@
 			<h4></h4>
 
 			<h5>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and front end development.</h5>
+
+			<h6>I'm currently <span style = "color: black">available</span> for hire. <br> 
+				<img src="pupper.gif" width="130", height="130"> <br>
+				PS: I absolutely love dogs!
+			</h6>
 			
 		</div>
 </body>
