fixed chrome car issue and added Instagram logo

--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
 				  		<a href = "https://twitter.com/fwittery" target="_blank">
 				  			<img src="twitter copy.png" width="60" height="60">
 				 		</a>
+				  </div>
+
+				  <div class="column">
+				  		<a href = "https://www.instagram.com/f25k10/" target="_blank">
+				  			<img src="instagram.png" width="60" height="60">
+				 		</a>
 				  </div>	
 
 				  <div class="column">
 				  		<a href="mailto:fardin_2510@hotmail.com">
-							<img src="email_cool.png" width="60" height="60" >
+							<img id = "email_icon" src="email_cool.png" width="60" height="60" >
 				    	</a>
 				  </div>
 
@@ -46,7 +52,7 @@
 
 				  <div class="column">
 				  		<a href="">
-							<img src="resume_icon.png" width="60" height="60" >
+							<img id = "resume_icon" src="resume_sample.jpg" width="60" height="60" >
 				    	</a>
 				  </div>
 
@@ -55,11 +61,13 @@
 
 			<h4></h4>
 
-			<h5>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and front end development.</h5>
+			<h5><br>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and front end development.</h5>
 
-			<h6>I'm currently <span style = "color: black">available</span> for hire. <br> 
+			<h6>I'm currently <span style = "color: black">available</span> for hire. 
+				<!--
+				<br>
 				<img src="pupper.gif" width="130", height="130"> <br>
-				PS: I absolutely love dogs!
+				PS: I absolutely love dogs. -->
 			</h6>
 			
 		</div>
