--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				  </div>	
 
 				  <div class="column">
-				  		<a href="mailto:fardin_2510@hotmail.com">
+				  		<a href="mailto:fardin.khan.cs@gmail.com">
 							<img id = "email_icon" src="email_cool.png" width="60" height="60" >
 				    	</a>
 				  </div>
@@ -51,7 +51,7 @@
 				  </div>
 
 				  <div class="column">
-				  		<a href="">
+				  		<a href="fardin_khan_resume.pdf" target = "_blank">
 							<img id = "resume_icon" src="resume_sample.jpg" width="60" height="60" >
 				    	</a>
 				  </div>
@@ -61,9 +61,9 @@
 
 			<h4></h4>
 
-			<h5><br>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and front end development.</h5>
+			<h5><br>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and general software development.</h5>
 
-			<h6>I'm currently <span style = "color: black">available</span> for hire. 
+			<h6>I'm currently <strong>available</strong> for hire. 
 				<!--
 				<br>
 				<img src="pupper.gif" width="130", height="130"> <br>
