added linkedin profile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				  </div>
 
 				  <div class="column">
-				  		<a href="">
+				  		<a href="https://www.linkedin.com/in/fardin-khan-92a3b01a7/" target="_blank">
 							<img src="linkedin copy.png" width="60" height="60" >
 				    	</a>
 				  </div>
