--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				  </div>
 
 				  <div class="column">
-				  		<a href="fardin_khan_resume.pdf" target = "_blank">
+				  		<a href="" target = "_blank">
 							<img id = "resume_icon" src="resume_sample.jpg" width="60" height="60" >
 				    	</a>
 				  </div>
