--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 		<div class = "container">
 			<h1>Fardin Khan</h1>
-			<h2>Computer Science · University of Victoria<br><br>I am a software engineer and I build stuff.</h2> 
+			<h2>Computer Science · University of Victoria<br><br>I like building stuff.</h2> 
 
 			<h3> 
 				<div class="row">
@@ -61,7 +61,8 @@
 
 			<h4></h4>
 
-			<h5><br>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>I am interested in iOS and general software development.</h5>
+			<h5><br>I've experience using Java, C, Python, Swift, SQL, JavaScript, HTML & CSS.<br>
+				I am interested in web, iOS and general software development.</h5>
 
 			<h6>I'm currently <strong>available</strong> for hire. 
 				<!--
