made bg full white

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 		<div class = "container">
 			<h1>Fardin Khan</h1>
-			<h2>Computer Science · University of Victoria<br><br>I like building stuff.</h2> 
+			<h2>Computer Science · University of Victoria<br>I like building stuff.</h2> 
 
 			<h3> 
 				<div class="row">
