update resume and resume file name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				  </div>
 
 				  <div class="column">
-				  		<a href="Fardin Khan_resume.pdf" target = "_blank">
+				  		<a href="Fardin Khan resume.pdf" target = "_blank">
 							<img id = "resume_icon" src="r.png" width="60" height="60"
 							onmouseover="displayResumeText()" onmouseout="hideResumeText()">
 				    	</a>
