added favicon and folders

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<title>Fardin Khan</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="shortcut icon" type="image/png" href="images/FK-favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<div class="profile-container">
-			<img class="pic" src="memoji.jpeg" width="200" height="220"/>
+			<img class="pic" src="images/memoji.jpeg" width="200" height="220"/>
 			<div class="about-me">
 				<div>
 					<p>Hi, I'm Fardin. <br> I studied Computer Science at UVic.<br>
@@ -21,7 +22,7 @@
 				<div class=links>
 					<ul>
 						<li><a href="https://github.com/f2k5" target="_blank">github</a></li>
-						<li><a href="Fardin Khan resume.pdf" target = "_blank">resume</a></li>
+						<li><a href="resume/Fardin Khan resume.pdf" target = "_blank">resume</a></li>
 						<li><a href="https://www.linkedin.com/in/csfardinkhan/" target="_blank">linkedin</a></li>
 						<li><a href="https://www.instagram.com/f25k10/" target="_blank">instagram</a></li>
 						<li><a href="mailto:fardin.khan.cs@gmail.com">email</li>
