added more info

--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 			<img class="pic" src="images/memoji.jpeg" width="200" height="220"/>
 			<div class="about-me">
 				<div>
-					<p>Hi, I'm Fardin. <br> I studied Computer Science at UVic.<br>
-					I write stuff to make computers do things.</p>
+					<h1>Hello <span class="blink_me">|</span></h1>
+					<p>
+						I'm Fardin. I write stuff to make computers do things. <br> 
+						I studied Computer Science at UVic (Go Vikes go!). <br>
+						I am currently based in Vancouver, BC.<br><br>
+						I previously worked as a Front-end Developer at Interface 48 Systems. <br>
+						I am currently working part time as a Software Developer at Tzartus Software. <br><br>
+						Hobbies: iPhone photography, watching/playing cricket, Netflix, <br> 
+						chillin with my sister's super sassy cat.<br><br>
+						Disclaimer: All opinions are my own.<br><br>
+					</p>
+
 				</div>
 
 				<div class=links>
