--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 					<h1>Hello <span class="blink_me">|</span></h1>
 					<p>
 						I'm Fardin. I write stuff to make computers do things. <br> 
-						I studied Computer Science at UVic (Go Vikes go!). <br>
+						I studied Computer Science at UVic (Go Vikes go!) and graduated in 2020. <br>
 						I am currently based in Vancouver, BC.<br><br>
 						I previously worked as a Front-end Developer at Interface 48 Systems. <br>
 						I am currently working part time as a Software Developer at Tzartus Software. <br><br>
 						Hobbies: iPhone photography, watching/playing cricket, Netflix, <br> 
 						chillin with my sister's super sassy cat.<br><br>
-						Disclaimer: All opinions are my own.<br><br>
+						Disclaimer: Any opinion(s) I have on the internet are my own.<br><br>
 					</p>
 
 				</div>
