--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class=links>
 					<ul>
 						<li><a href="https://github.com/f2k5" target="_blank">github</a></li>
-						<li><a href="resume/Fardin Khan resume.pdf" target = "_blank">resume</a></li>
+						<li><a href="resume/Fardin Khan  - Resume.pdf" target = "_blank">resume</a></li>
 						<li><a href="https://www.linkedin.com/in/csfardinkhan/" target="_blank">linkedin</a></li>
 						<li><a href="https://www.instagram.com/f25k10/" target="_blank">instagram</a></li>
 						<li><a href="mailto:fardin.khan.cs@gmail.com">email</li>
