--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						I previously worked as a Front-end Developer at Interface 48 Systems. <br>
 						I am currently working part time as a Software Developer at Tzartus Software. <br><br>
 						Hobbies: iPhone photography, watching/playing cricket, Netflix, <br> 
-						chillin with my sister's super sassy cat.<br><br>
+						chillin with my sister's super sassy cats - BlueBee & Miso.<br><br>
 						Disclaimer: Any opinion(s) I have on the internet are my own.<br><br>
 					</p>
 
